--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,16 @@ before_install:
   - docker build -t shikshamishra/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true shikshamishra/docker-react npm run test
+  - docker run -e CI=true shikshamishra/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-421783080827"
+  bucket_path: "docker"
+  on:
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
